Fix contact form field styling on firefox
Wasn't distributing the width with the available free space correctly

--- a/components/Contact.module.css
+++ b/components/Contact.module.css
@@ -46,6 +46,7 @@
   display: flex;
   flex-direction: column;
   min-width: 200px;
+  flex: 1;
 }
 
 .messageField {
